Configure theme settings in config.toml
Add theme configuration for Streamlit app

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,11 @@
 browser.gatherUsageStats = false
 
+ [theme]
+ base="light"
+ primaryColor="#5e95b4ff"
+ 
+
+ [theme.sidebar]
+ base="light"
+ primaryColor="#5e95b4ff"
+ backgroundColor="#eceaeaff"
